--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,8 @@
 
 <header class="site-header">
     <div class="inner-wide">
-        <h1 class="site-title"><a href="{{ site.baseurl }}/" id="glas-logo-1">    <img src="{{ site.baseurl }}/img/8cc0314fc2fbd058c2e7dbc6f099452e.jpg"  alt="Lucas Gatsas"></a><!--{{ site.title }}--></a></h1>
+        <h1 class="site-title"><a href="{{ site.baseurl }}/" id="glas-logo-1">    
+            <img src="{{ site.baseurl }}/img/cbxex-ruenl.svg"    style="width: 150px; "  alt="TeleSwipe"></a><!--{{ site.title }}--></a></h1>
         <nav class="site-navigation" role="navigation">
     <h2 class="screen-reader-text">hello</h2>
     <ul class="menu">
