--- a/assets/css/style-v=cba79c2df0.css
+++ b/assets/css/style-v=cba79c2df0.css
@@ -1557,7 +1557,7 @@ pre .storage {
 }
 
 .hero-wrap {
-	border-left: 7px solid rgb(228, 228, 228);
+	/*border-left: 7px solid rgb(228, 228, 228);*/
 	padding-left: 45px;
 }
 
