--- a/assets/css/style-v=cba79c2df0.css
+++ b/assets/css/style-v=cba79c2df0.css
@@ -597,7 +597,7 @@ li > ol {
 }
 
 hr {
-	background-color: #eee;
+	background-color: #eeeeee2e;
 	border: 0;
 	height: 1px;
 	margin: 30px 0;
@@ -1528,10 +1528,6 @@ pre .storage {
 	text-align: center;
 	vertical-align: middle;
 	width: 100%;
-}
-
-.hero .cover-content {
-	text-align: left;
 }
 
 .cover .inner {
@@ -2701,7 +2697,8 @@ a.page-link {
     font-family: Helvetica;
     text-transform: uppercase;
     font-size: 12px;
-    padding: 10px;
+	padding: 10px;
+	color:black;
 }div#countbox1{
 
 	  font-family: Helvetica;
