--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -109,7 +109,7 @@ organiser: "Lucas Gatsas"
                 </div>
                 <div class="author-box">
                   {% if organiser.photo %}
-                    <img src="{{organiser.photo}}" alt="Jane Doe" class="author-avatar" />
+                <!-- <img src="{{organiser.photo}}" alt="Jane Doe" class="author-avatar" /> -->    
                   {% endif %}
                     {% if organiser.photo %}
                     <h4 class="author-title">About <a href="">By {{organiser.name}}</a></h4>
