--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -48,12 +48,12 @@ organiser: "Lucas Gatsas"
 
 				
 					<p>    
-                            <img src="http://spaceg.github.io/assets/img/l-g.png" alt="Jane Doe" class="author-avatar" />
+                     <!-- <img src="http://spaceg.github.io/assets/img/l-g.png" alt="Jane Doe" class="author-avatar" /> -->       
                         </p>
-					<p class="page-description">Lucas Gatsas is a Swiss based Web - Developer, Front End Engineer & UI/UX Designer from St. Gallen, Switzerland.</p>
-					<p class="author-links">
+						<h2 class="widget-title" style="    text-align: center;"">{{ organiser.descsidebartitle }}</h2>
+						<p class="author-links">
 						<span class="author-location"><i class="icon-map-marker" aria-hidden="true"></i> St. Gallen, Switzerland</span>
-						<span class="author-website"><i class="icon-chain" aria-hidden="true"></i> <a href="http://www.lucasgatsas.ch" target="_blank">http://www.lucasgatsas.ch</a></span>
+						<span class="author-website"><i class="icon-chain" aria-hidden="true"></i> <a href="http://teleswipe.co" target="_blank">teleswipe.co</a></span>
 					</p>
 				</div><!-- .inner -->
 			</div><!-- .cover-content -->
