--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -10,9 +10,9 @@ organiser: "Lucas Gatsas"
 <head>
 	<meta charset="utf-8">
 
-	<title>Lucas Gatsas</title>
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 
 	<link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic%7CMontserrat:400,700" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" type="text/css" href="../../assets/css/style-v=cba79c2df0.css" />
