--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -70,7 +70,7 @@ layout: default-post
                 </div>
                 <div class="author-box">
                         {% if organiser.photo %}
-                            <img src="{{organiser.photo}}"  class="author-avatar" />
+                      <!-- <img src="{{organiser.photo}}"  class="author-avatar" />-->      
                         {% endif %}
                             {% if organiser.photo %}
                     <h4 class="author-title">About 
